src/snapshots/templates__test__error_unknown_keyword.snap
---
source: src/main.rs
assertion_line: 1089
expression: "Hello {% wrong %}"

---
Unexpected identifier: wrong

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% wrong %}
  │          ^^^^^


